duck/test/fail/spec_only.duck
main = testAll

f :: Int -> Int
